# MARL-for-Enterprise-Grade-Cross-Chain-DeFi-Optimization

./: Dockerfile  README.md  artifact_manifest.json  docker-compose.yml
.github/workflows/: test.yml
code/: cli.sh  pyproject.toml  requirements.txt
code/configs/: demo.yaml
code/notebooks/: 01_environment_demo.ipynb  02_training_demo.ipynb
code/src/agents/: __init__.py  baselines.py  communication.py  gnn_encoder.py  mappo.py  qmix.py
code/src/data/: generate_synthetic.py
code/src/envs/: __init__.py  cross_chain_env.py  demo_env.py
code/src/eval/: evaluate_demo.py  metrics.py
code/src/train/: train_synthetic.py
code/src/utils/: __init__.py  checkpointing.py  logger.py
code/tests/: test_agents.py  test_env.py  test_integration.py  test_utils.py
docs/: DATA_ACQUISITION_PLAN.md  README.md  manifest.md  required_resources.md
notebook/: MARL-for-Enterprise-Grade-Cross-Chain-DeFi-Optimization.ipynb
proposal/: Makefile  README.md  main.tex  proposal.html  references.bib
scripts/: build_all_components.py  build_complete_system.py  build_production_features.sh
