[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "marl-cross-chain-defi"
version = "1.0.0"
description = "Multi-Agent Reinforcement Learning for Cross-Chain DeFi Optimization"
authors = [{name = "Research Team", email = "research@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.28.0",
    "pettingzoo>=1.24.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pytest>=7.3.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "mypy", "pytest-cov"]
viz = ["plotly>=5.14.0", "tensorboard>=2.13.0", "wandb>=0.15.0"]
gnn = ["torch-geometric>=2.3.0", "torch-scatter>=2.1.0"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["code/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
